// WattPilot Database Schema
// Target: V1 MVP
// Designed with V1.5 (Tibber) extension in mind.
// V2 smart-home devices should be introduced by refactoring rather than premature abstraction.

Enum user_status {
  ACTIVE
  INACTIVE
}

Enum ev_status {
  ACTIVE
  INACTIVE
}

Enum price_provider {
  HVA_KOSTER_STROMMEN
  TIBBER
}

// charging_plans.status records the outcome of a stored charging plan. Stored as a
// CHECK-constrained varchar (like price_area), not a database enum type.
//   SUCCEEDED - the confirmed candidate; all recommendation fields are populated
//   FAILED    - reserved; the CHECK constraints still support it, but the preview/confirm flow
//               never writes a FAILED row (an infeasible preview is not persisted)
//
// A charging_plans row is only ever written together with one charging_plan_slots set and one
// charging_schedules row, in a single transaction, when the user confirms a previewed candidate.
// The preview endpoint writes nothing.

Enum charging_schedule_status {
  WAITING
  IN_PROGRESS
  COMPLETED
  CANCELLED
  FAILED
}

// charging_sessions.status. CANCELLED is not written by V1 (execution-time cancellation is out of
// scope; a schedule cancelled while still WAITING never gets a session at all) but stays a valid
// schema value for a future version, the same way charging_plans.status keeps FAILED today.
Enum charging_session_status {
  STARTED
  COMPLETED
  FAILED
  CANCELLED
}

// Foreign-key delete behavior (the refs below carry no ON DELETE setting; the migrations do):
//   ON DELETE CASCADE  - refresh_tokens.user_id, evs.user_id, charging_plans.user_id,
//                        charging_plans.ev_id, charging_plan_slots.charging_plan_id,
//                        charging_schedules.charging_plan_id, charging_schedule_slots.charging_schedule_id,
//                        charging_sessions.charging_schedule_id
//   ON DELETE RESTRICT - charging_plan_slots.electricity_price_id, charging_schedule_slots.electricity_price_id
// In practice nothing deletes users or EVs: an EV is soft-deleted (status INACTIVE) and users are never removed.

Table users {
  id bigint [pk, increment]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  name varchar(100) [not null]
  default_price_area varchar(20) [not null, note: 'Default Norwegian bidding zone, e.g. NO1-NO5']
  status user_status [not null, default: 'ACTIVE']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  checks {
    `default_price_area IN ('NO1', 'NO2', 'NO3', 'NO4', 'NO5')` [name: 'user_default_price_area_valid']
  }
}

Table refresh_tokens {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  token_hash varchar(255) [not null, unique, note: 'Store only a one-way hash of the refresh token']
  expires_at timestamptz [not null, note: 'Absolute end of the login session, fixed at the initial login (7d, or 30d with remember-me); a rotation copies this value onto the successor row unchanged']
  revoked_at timestamptz
  created_at timestamptz [not null]

  Indexes {
    user_id
    expires_at
  }

  checks {
    `expires_at > created_at` [name: 'refresh_token_expiry_valid']
  }
}

Table evs {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  name varchar(100) [not null, note: 'User-defined EV name']
  manufacturer varchar(100) [not null]
  model varchar(100) [not null]
  battery_capacity_kwh decimal(8,2) [not null]
  max_ac_charging_power_kw decimal(8,2) [not null]
  default_charger_power_kw decimal(8,2) [not null]
  status ev_status [not null, default: 'ACTIVE']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    user_id
  }

  checks {
    `battery_capacity_kwh > 0` [name: 'ev_battery_capacity_positive']
    `max_ac_charging_power_kw > 0 AND max_ac_charging_power_kw <= 22` [name: 'ev_max_ac_charging_power_valid']
    `default_charger_power_kw > 0 AND default_charger_power_kw <= 22` [name: 'ev_default_charger_power_valid']
  }
}

Table electricity_prices {
  id bigint [pk, increment]
  provider price_provider [not null, default: 'HVA_KOSTER_STROMMEN']
  price_area varchar(20) [not null, note: 'Norwegian bidding zone, e.g. NO1-NO5']
  starts_at timestamptz [not null]
  ends_at timestamptz [not null]
  price_per_kwh decimal(12,6) [not null]
  currency varchar(3) [not null, default: 'NOK']
  fetched_at timestamptz [not null]

  Indexes {
    (provider, price_area, starts_at) [unique]
    (price_area, starts_at)
  }

  checks {
    `ends_at > starts_at` [name: 'electricity_price_time_range_valid']
    `price_area IN ('NO1', 'NO2', 'NO3', 'NO4', 'NO5')` [name: 'electricity_price_area_valid']
  }
}

Table charging_plans {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  ev_id bigint [not null, ref: > evs.id]

  current_battery_percent decimal(5,2) [not null]
  target_battery_percent decimal(5,2) [not null]
  price_area varchar(20) [not null, note: 'Price area snapshot used for this charging plan']
  earliest_start_at timestamptz [not null, note: 'Defaults to plan creation time when omitted by the client']
  required_completion_at timestamptz [not null]

  // EV snapshot used by the optimizer so past plans remain reproducible
  ev_name varchar(100) [not null]
  ev_manufacturer varchar(100) [not null]
  ev_model varchar(100) [not null]
  battery_capacity_kwh decimal(8,2) [not null]
  max_ac_charging_power_kw decimal(8,2) [not null]
  default_charger_power_kw decimal(8,2) [not null]

  calculated_energy_kwh decimal(8,2)
  effective_charging_power_kw decimal(8,2)
  estimated_duration_minutes int

  recommended_start_at timestamptz
  recommended_end_at timestamptz
  expected_energy_kwh decimal(8,2)
  estimated_cost_nok decimal(12,4)
  // Reference cost: the window's energy priced at the time-weighted average electricity price across
  // the allowed window [earliest_start_at, required_completion_at]. expected_savings = baseline - estimated.
  baseline_cost_nok decimal(12,4)
  expected_savings_nok decimal(12,4)

  status varchar(20) [not null, note: 'SUCCEEDED or FAILED']
  failure_reason varchar(500)
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    ev_id
    (user_id, created_at)
    (status, required_completion_at)
  }

  checks {
    `current_battery_percent >= 0 AND current_battery_percent <= 100` [name: 'charging_plan_current_battery_valid']
    `target_battery_percent > 0 AND target_battery_percent <= 100` [name: 'charging_plan_target_battery_valid']
    `target_battery_percent > current_battery_percent` [name: 'charging_plan_battery_range_valid']
    `price_area IN ('NO1', 'NO2', 'NO3', 'NO4', 'NO5')` [name: 'charging_plan_price_area_valid']
    `required_completion_at > earliest_start_at` [name: 'charging_plan_window_valid']
    `battery_capacity_kwh > 0` [name: 'charging_plan_battery_capacity_positive']
    `max_ac_charging_power_kw > 0` [name: 'charging_plan_max_ac_power_positive']
    `default_charger_power_kw > 0` [name: 'charging_plan_charger_power_positive']
    `calculated_energy_kwh IS NULL OR calculated_energy_kwh >= 0` [name: 'charging_plan_energy_non_negative']
    `effective_charging_power_kw IS NULL OR effective_charging_power_kw > 0` [name: 'charging_plan_effective_power_positive']
    `estimated_duration_minutes IS NULL OR estimated_duration_minutes > 0` [name: 'charging_plan_duration_positive']
    `recommended_end_at IS NULL OR recommended_start_at IS NULL OR recommended_end_at > recommended_start_at` [name: 'charging_plan_recommended_range_valid']
    `expected_energy_kwh IS NULL OR expected_energy_kwh >= 0` [name: 'charging_plan_expected_energy_non_negative']
    `status IN ('SUCCEEDED', 'FAILED')` [name: 'charging_plan_status_valid']
    // A SUCCEEDED plan carries a complete recommendation and no failure reason.
    `status <> 'SUCCEEDED' OR (calculated_energy_kwh IS NOT NULL AND effective_charging_power_kw IS NOT NULL AND estimated_duration_minutes IS NOT NULL AND recommended_start_at IS NOT NULL AND recommended_end_at IS NOT NULL AND expected_energy_kwh IS NOT NULL AND estimated_cost_nok IS NOT NULL AND baseline_cost_nok IS NOT NULL AND expected_savings_nok IS NOT NULL AND failure_reason IS NULL)` [name: 'charging_plan_succeeded_fields_present']
    // A FAILED plan carries only the failure reason; every success-only field is null.
    `status <> 'FAILED' OR (failure_reason IS NOT NULL AND calculated_energy_kwh IS NULL AND effective_charging_power_kw IS NULL AND estimated_duration_minutes IS NULL AND recommended_start_at IS NULL AND recommended_end_at IS NULL AND expected_energy_kwh IS NULL AND estimated_cost_nok IS NULL AND baseline_cost_nok IS NULL AND expected_savings_nok IS NULL)` [name: 'charging_plan_failed_fields_absent']
  }
}

Table charging_plan_slots {
  id bigint [pk, increment]
  charging_plan_id bigint [not null, ref: > charging_plans.id]
  electricity_price_id bigint [not null, ref: > electricity_prices.id]

  slot_start_at timestamptz [not null, note: 'Real overlap with the charging window; first/last slot may be partial']
  slot_end_at timestamptz [not null]
  price_per_kwh decimal(12,6) [not null, note: 'Snapshot of the hour price at calculation time (electricity_prices rows are upserted in place); may be negative']
  planned_energy_kwh decimal(8,2) [not null, note: 'Grid-side energy drawn in this slot']
  expected_cost_nok decimal(12,4) [not null, note: 'planned_energy_kwh * price_per_kwh']
  sequence_no int [not null]

  Indexes {
    charging_plan_id
    (charging_plan_id, sequence_no) [unique]
  }

  checks {
    `slot_end_at > slot_start_at` [name: 'charging_plan_slot_time_range_valid']
    `planned_energy_kwh > 0` [name: 'charging_plan_slot_energy_positive']
    `sequence_no > 0` [name: 'charging_plan_slot_sequence_positive']
  }
}

Table charging_schedules {
  id bigint [pk, increment]
  // The owning user and EV are reached through charging_plan_id -> charging_plans; this table does
  // not duplicate user_id / ev_id. The "same EV, overlapping active schedule" check joins via the plan.
  charging_plan_id bigint [not null, ref: > charging_plans.id]

  scheduled_start_at timestamptz [not null]
  scheduled_end_at timestamptz [not null]
  expected_energy_kwh decimal(8,2) [not null]
  estimated_cost_nok decimal(12,4) [not null]

  status charging_schedule_status [not null, default: 'WAITING']

  // Bounded-retry bookkeeping for a transient error thrown by ChargingExecutionPort. A database
  // failure that rolls back the whole execution attempt is retried for free on the next scheduler
  // tick and never touches these columns (see ChargingExecutionService).
  retry_count int [not null, default: 0, note: 'Consecutive transient errors since the last successful phase transition']
  next_retry_at timestamptz [note: 'Earliest time the scheduler may retry; null outside a backoff wait']

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    charging_plan_id [unique]
    (status, scheduled_start_at)
    scheduled_end_at [name: 'idx_charging_schedules_in_progress_end', where: "status = 'IN_PROGRESS'"]
  }

  checks {
    `scheduled_end_at > scheduled_start_at` [name: 'charging_schedule_time_range_valid']
    `expected_energy_kwh > 0` [name: 'charging_schedule_energy_positive']
    `retry_count >= 0` [name: 'charging_schedule_retry_count_non_negative']
    `next_retry_at IS NULL OR status IN ('WAITING', 'IN_PROGRESS')` [name: 'charging_schedule_next_retry_only_when_active']
  }
}

// Reserved but UNUSED in V1. The per-hour breakdown a schedule needs (confirmation screen,
// charging-schedule detail, charging-history detail) is read from charging_plan_slots, which the
// confirm flow populates. No entity, repository, or write path targets this table. Kept for a future
// version that needs a schedule-scoped copy (e.g. once a schedule can diverge from its plan).
Table charging_schedule_slots {
  id bigint [pk, increment]
  charging_schedule_id bigint [not null, ref: > charging_schedules.id]
  electricity_price_id bigint [not null, ref: > electricity_prices.id]

  slot_start_at timestamptz [not null]
  slot_end_at timestamptz [not null]
  planned_energy_kwh decimal(8,2) [not null]
  expected_cost_nok decimal(12,4) [not null]
  sequence_no int [not null]

  Indexes {
    charging_schedule_id
    (charging_schedule_id, sequence_no) [unique]
  }

  checks {
    `slot_end_at > slot_start_at` [name: 'charging_schedule_slot_time_range_valid']
    `planned_energy_kwh > 0` [name: 'charging_schedule_slot_energy_positive']
    `sequence_no > 0` [name: 'charging_schedule_slot_sequence_positive']
  }
}

// One execution attempt outcome per charging_schedules row (enforced by the unique index below).
// Created exactly once, at the moment a definitive outcome is known for the schedule's start attempt
// (STARTED on success, FAILED on a business/system failure or a missed execution window) and updated
// at most once more, when the completion attempt resolves (COMPLETED or FAILED).
//
// baseline_cost_nok, optimized_cost_nok and estimated_savings_nok are populated only on COMPLETED:
// they describe a realized outcome, so a failed or cancelled attempt leaves them null rather than
// reporting savings that were never delivered. In V1 mock charging finishes exactly as planned, so
// actual_cost_nok == optimized_cost_nok and actual_energy_kwh == the plan's grid-side energy.
//
// estimated_savings_nok stores the plan's prediction (baseline - optimized). The charging-history
// API does NOT surface this as "the" saving: it reports realizedSavingsNok = baseline_cost_nok -
// actual_cost_nok (equal in V1, distinct in concept) and its savings totals sum only that. The
// column name is kept; the planned/realized split lives in the response DTOs, not the schema.
//
// The charging-history endpoints are a read model over this table joined to charging_schedules and
// charging_plans (no charging_history table). Only COMPLETED/FAILED sessions are history.
Table charging_sessions {
  id bigint [pk, increment]
  charging_schedule_id bigint [not null, ref: > charging_schedules.id]

  started_at timestamptz
  completed_at timestamptz
  actual_energy_kwh decimal(8,2)
  actual_cost_nok decimal(12,4)

  baseline_cost_nok decimal(12,4) [note: 'Reference cost at the window-average electricity price, from the plan snapshot']
  optimized_cost_nok decimal(12,4)
  estimated_savings_nok decimal(12,4)

  status charging_session_status [not null]
  failure_code varchar(50) [note: 'Machine-readable reason; see the CHECK below for the allowed values']
  failure_reason varchar(500)

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    charging_schedule_id [unique]
    started_at
  }

  checks {
    `completed_at IS NULL OR started_at IS NULL OR completed_at >= started_at` [name: 'charging_session_time_range_valid']
    `actual_energy_kwh IS NULL OR actual_energy_kwh >= 0` [name: 'charging_session_energy_non_negative']
    `failure_code IS NULL OR failure_code IN ('CHARGER_UNAVAILABLE', 'VEHICLE_DISCONNECTED', 'START_REJECTED', 'CHARGING_INTERRUPTED', 'MISSED_EXECUTION_WINDOW', 'SYSTEM_ERROR')` [name: 'charging_session_failure_code_valid']
    // Per-status field presence, mirroring the pattern charging_plans uses for SUCCEEDED/FAILED.
    `status <> 'STARTED' OR (started_at IS NOT NULL AND completed_at IS NULL AND actual_energy_kwh IS NULL AND actual_cost_nok IS NULL AND baseline_cost_nok IS NULL AND optimized_cost_nok IS NULL AND estimated_savings_nok IS NULL AND failure_code IS NULL AND failure_reason IS NULL)` [name: 'charging_session_started_fields_valid']
    `status <> 'COMPLETED' OR (started_at IS NOT NULL AND completed_at IS NOT NULL AND completed_at >= started_at AND actual_energy_kwh IS NOT NULL AND actual_cost_nok IS NOT NULL AND baseline_cost_nok IS NOT NULL AND optimized_cost_nok IS NOT NULL AND estimated_savings_nok IS NOT NULL AND failure_code IS NULL AND failure_reason IS NULL)` [name: 'charging_session_completed_fields_valid']
    `status <> 'FAILED' OR (completed_at IS NULL AND actual_energy_kwh IS NULL AND actual_cost_nok IS NULL AND baseline_cost_nok IS NULL AND optimized_cost_nok IS NULL AND estimated_savings_nok IS NULL AND failure_code IS NOT NULL AND failure_reason IS NOT NULL)` [name: 'charging_session_failed_fields_valid']
    `status <> 'CANCELLED' OR (completed_at IS NULL AND actual_energy_kwh IS NULL AND actual_cost_nok IS NULL AND baseline_cost_nok IS NULL AND optimized_cost_nok IS NULL AND estimated_savings_nok IS NULL AND failure_code IS NULL AND failure_reason IS NULL)` [name: 'charging_session_cancelled_fields_valid']
  }
}

// -------------------------
// V1.5 candidate extension
// -------------------------
// Add only when vehicle master data or Tibber integration is implemented.
//
// Table vehicle_models {
//   id bigint [pk, increment]
//   manufacturer varchar(100) [not null]
//   model varchar(100) [not null]
//   variant varchar(100)
//   model_year int
//   battery_capacity_kwh decimal(8,2) [not null]
//   max_ac_charging_power_kw decimal(8,2) [not null]
//   created_at timestamptz [not null]
//   updated_at timestamptz [not null]
//
//   Indexes {
//     (manufacturer, model, variant, model_year) [unique]
//   }
//
//   checks {
//     `battery_capacity_kwh > 0` [name: 'vehicle_model_battery_capacity_positive']
//     `max_ac_charging_power_kw > 0` [name: 'vehicle_model_charging_power_positive']
//   }
// }
//
// Add a nullable reference to evs:
// vehicle_model_id bigint [ref: > vehicle_models.id]
//
// Keep evs.battery_capacity_kwh, evs.max_ac_charging_power_kw, and
// evs.default_charger_power_kw as the V1 inputs/snapshots used by the optimizer.
// This supports manual V1 entries and later vehicle-model presets.
//
// Table integration_accounts {
//   id bigint [pk, increment]
//   user_id bigint [not null]
//   provider varchar(50) [not null, note: 'e.g. TIBBER']
//   external_account_id varchar(255)
//   access_token_encrypted text
//   refresh_token_encrypted text
//   token_expires_at timestamptz
//   created_at timestamptz [not null]
//   updated_at timestamptz [not null]
//
//   Indexes {
//     (user_id, provider) [unique]
//   }
// }
//
// Ref: integration_accounts.user_id > users.id
//
// Tibber prices may be personalized per account. Do not store personalized
// prices under the V1 public-price unique key alone. When implemented, either
// associate them with integration_account_id using a separate table or add an
// account-scoped key with PostgreSQL partial unique indexes.

// -------------------------
// V2 refactoring direction
// -------------------------
// Manufacturer OAuth connections should be stored separately from evs.
//
// Table vehicle_connections {
//   id bigint [pk, increment]
//   user_id bigint [not null]
//   ev_id bigint [not null]
//   provider varchar(50) [not null, note: 'e.g. TESLA, BMW, HYUNDAI']
//   external_vehicle_id varchar(255) [not null]
//   access_token_encrypted text
//   refresh_token_encrypted text
//   token_expires_at timestamptz
//   connection_status varchar(50) [not null]
//   created_at timestamptz [not null]
//   updated_at timestamptz [not null]
//
//   Indexes {
//     (user_id, provider, external_vehicle_id) [unique]
//     ev_id
//   }
// }
//
// Ref: vehicle_connections.user_id > users.id
// Ref: vehicle_connections.ev_id > evs.id
//
// When smart-home devices are actually introduced,
// consider extracting EV-specific ownership into a generalized device model:
//
// devices
//   ├── ev_device_details
//   ├── washing_machine_details
//   └── dishwasher_details
//
// At that point, charging_plans/schedules can evolve into
// generalized energy_jobs/energy_schedules.
// Do not introduce this abstraction in V1 unless requirements demand it.
